--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" version="6.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" version="5.0">
   <servlet>
     <description></description>
     <display-name>payment</display-name>
@@ -19,4 +19,24 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>contactUs</display-name>
+    <servlet-name>contactUs</servlet-name>
+    <servlet-class>contactUs</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>contactUs</servlet-name>
+    <url-pattern>/contactUs</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>controllerContact</display-name>
+    <servlet-name>controllerContact</servlet-name>
+    <servlet-class>paymentServlet.controllerContact</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>controllerContact</servlet-name>
+    <url-pattern>/controllerContact</url-pattern>
+  </servlet-mapping>
 </web-app>
