--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/apache-tomcat-10.1.19"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v10.1 (2)"/>
+	<classpathentry kind="lib" path="D:/CSC584/apache-tomcat-10.1.25/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="D:/CSC584/apache-tomcat-10.1.25/lib/jsp-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
