--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,13 +2,13 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" version="6.0">
   <servlet>
     <description></description>
-    <display-name>payment</display-name>
-    <servlet-name>payment</servlet-name>
-    <servlet-class>paymentServlet.payment</servlet-class>
+    <display-name>paymentController</display-name>
+    <servlet-name>paymentController</servlet-name>
+    <servlet-class>paymentServlet.paymentController</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>payment</servlet-name>
-    <url-pattern>/payment</url-pattern>
+    <servlet-name>paymentController</servlet-name>
+    <url-pattern>/paymentController</url-pattern>
   </servlet-mapping>
   <display-name>FinalProject</display-name>
   <welcome-file-list>
@@ -31,14 +31,10 @@
   </servlet-mapping>
   <servlet>
     <description></description>
-    <display-name>controllerContact</display-name>
-    <servlet-name>controllerContact</servlet-name>
-    <servlet-class>paymentServlet.controllerContact</servlet-class>
+    <display-name>ControllerContactUs</display-name>
+    <servlet-name>ControllerContactUs</servlet-name>
+    <servlet-class>paymentServlet.ControllerContactUs</servlet-class>
   </servlet>
-  <servlet-mapping>
-    <servlet-name>controllerContact</servlet-name>
-    <url-pattern>/controllerContact</url-pattern>
-      </servlet-mapping>
        <servlet>
     <description></description>
     <display-name>cartServlet</display-name>
