--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,10 +2,14 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" version="6.0">
   <servlet>
     <description></description>
-    <display-name>paymentController</display-name>
-    <servlet-name>paymentController</servlet-name>
-    <servlet-class>paymentServlet.paymentController</servlet-class>
+    <display-name>PaymentControl1</display-name>
+    <servlet-name>PaymentControl1</servlet-name>
+    <servlet-class>java.paymentServlet.PaymentControl1</servlet-class>
   </servlet>
+  <servlet-mapping>
+    <servlet-name>PaymentControl1</servlet-name>
+    <url-pattern>/PaymentControl1</url-pattern>
+  </servlet-mapping>
   <display-name>FinalProject</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
