--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,7 @@
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
+     
   </welcome-file-list>
   <servlet>
     <description></description>
@@ -45,4 +46,12 @@
     <servlet-name>CartOrderServlet</servlet-name>
     <url-pattern>/CartOrderServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>register</servlet-name>
+    <servlet-class>java.RegisterModel.RegisterServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+    <servlet-name>register</servlet-name>
+    <url-pattern>/RegisterServlet</url-pattern>
+</servlet-mapping>
 </web-app>
