--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,7 +48,7 @@
   </servlet-mapping>
   <servlet>
     <servlet-name>register</servlet-name>
-    <servlet-class>RegisterModel.RegisterServlet</servlet-class>
+    <servlet-class>main.java.RegisterModel.RegisterServlet</servlet-class>
 </servlet>
 <servlet-mapping>
 
